--- a/bookarea/app/views/books/index.html.erb
+++ b/bookarea/app/views/books/index.html.erb
@@ -10,6 +10,7 @@
       <th>Publishing house</th>
       <th>Year</th>
       <th>Isbn</th>
+      <th>liked_by</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,6 +23,7 @@
         <td><%= book.publishing_house %></td>
         <td><%= book.year %></td>
         <td><%= book.isbn %></td>
+        <td><%= book.users.to_json %>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
