--- a/bookarea/app/views/layouts/application.html.erb
+++ b/bookarea/app/views/layouts/application.html.erb
@@ -20,5 +20,8 @@
       <small>Logged in as <%= @current_user.username %></small>
     <% end %>
     <%= yield %>
+    <% unless @path==sessions_path %>
+      <%= button_to 'Sign out', {controller: :sessions, action: :destroy, id: session[:session_id]}, method: :delete, class: 'btn btn-secondary col-12'%>
+    <% end %>
   </body>
 </html>
