--- a/bookarea/app/views/books/new.html.erb
+++ b/bookarea/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
 <h1>New Book</h1>
 
-<%= render 'form', book: @book, current_user: @current_user %>
+<%= render 'form', book: @book %>
 <%= link_to 'Back', books_path %>
