--- a/bookarea/app/views/users/edit.html.erb
+++ b/bookarea/app/views/users/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="btn-group col-12">
     <%= link_to 'Show', @user, class: 'btn btn-primary' %>
     <%= render 'back', current_user: @current_user %>
-    <%= link_to 'Delete account', {controller: :users, action: :destroy, id: sessions[:current_user_id]},
+    <%= link_to 'Delete account', {controller: :users, action: :destroy, id: session[:current_user_id]},
                   method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>
   </div>
 </div>
