--- a/bookarea/app/views/users/index.html.erb
+++ b/bookarea/app/views/users/index.html.erb
@@ -1,6 +1,7 @@
 <% flash[:notice]&.tap do |notice| %>
     <div class="alert alert-success"><%= notice %></div>
 <% end %>
+<%= button_to 'Sign out', {controller: :sessions, action: :destroy, id: session[:session_id]}, method: :delete, class: 'btn btn-secondary col-3'%>
 <h1>Users</h1>
 
 <table class="table table-hover">
