--- a/bookarea/app/assets/stylesheets/book.scss
+++ b/bookarea/app/assets/stylesheets/book.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the book controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+body{
+    color: #FED132;
+}
+.card {
+    margin: auto;
+    width: 30%;
+}
+
+.card-box{
+    stroke-width: 12px;
+    stroke: #FED132;
+    filter: drop-shadow(16, 16, #236DF6);
+}
