--- a/bookarea/app/views/books/index.html.erb
+++ b/bookarea/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<%= button_to 'Sign out', {controller: :sessions, action: :destroy, id: session[:session_id]}, method: :delete, class: 'btn btn-secondary col-3'%>
 <h1>Books</h1>
 
 <table>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= button_to 'New Book', {controller: :books, action: :new}, method: :get, class: 'btn btn-outline-primary ntm-sm' %>
