--- a/bookarea/app/views/layouts/application.html.erb
+++ b/bookarea/app/views/layouts/application.html.erb
@@ -18,7 +18,43 @@
 
   <body>
     <% if @current_user %>
-      <small>Logged in as <%= @current_user.username %></small>
+     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#" disabled=true>Bookarea</a>
+      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="navbar-collapse collapse" id='navbar'>
+        <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
+            <ul class="dropdown-menu" aria-labelledby="dropdown03">
+              <li><a class='dropdown-item' href='/books'>View all</a></li>
+              <li><a class="dropdown-item" href="/books/new">Add new</a></li>
+            </ul>
+          </li>
+          <% if @current_user.admin %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users">Users</a>
+          </li>
+          <% end%>
+          </ul>
+          <ul class="navbar-nav">
+            <li>
+            <small>
+              <strong>
+                <%= link_to t('forms.sign_out'), {controller: :sessions, action: :destroy, id: session[:session_id]}, method: :delete, class: 'nav-link', style: 'margin: 0;'%>
+              </strong>
+            </small>
+            <small style='color: white;'>
+              Logged in as <%= @current_user.username %>
+            </small>
+            </li>
+            </ul>
+      </div>
+    </div>
+</nav>
     <% end %>
     <%= yield %>
   </body>
