--- a/bookarea/app/views/users/_form.html.erb
+++ b/bookarea/app/views/users/_form.html.erb
@@ -27,5 +27,5 @@
       <%= form.label :admin, "Is Admin", class: "form-check-label" %>
     </div>
   <% end %>
-  <%= form.submit("Submit", class: "btn btn-primary col-12") %>
+  <%= form.submit("Submit", class: "btn btn-outline-primary col-12") %>
 <% end %>
