--- a/bookarea/app/views/users/edit.html.erb
+++ b/bookarea/app/views/users/edit.html.erb
@@ -1,11 +1,12 @@
+<div style='margin: auto; width: 20%;'>
 <h1>Edit user</h1>
-
-<div style="width: 400px; padding: 50px">
+<div>
   <%= render 'form', user: @user, current_user: @current_user %>
   <div class="btn-group col-12">
-    <%= link_to 'Show', @user, class: 'btn btn-primary' %>
+    <%= link_to 'Show', @user, class: 'btn btn-outline-primary margin' %>
     <%= render 'back', current_user: @current_user %>
     <%= link_to 'Delete account', {controller: :users, action: :destroy, id: session[:current_user_id]},
-                  method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger'%>
+                  method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger'%>
   </div>
+</div>
 </div>
