--- a/bookarea/app/views/users/new.html.erb
+++ b/bookarea/app/views/users/new.html.erb
@@ -1,10 +1,9 @@
+<div style='margin: auto; width: 20%;'>
 <% unless @current_user %>
   <h1>Sign up</h1>
 <% else %>
   <h1>New user</h1>
 <% end %>
-
-<div style="width: 400px; padding: 50px">
   <%= render 'form', user: @user, current_user: @current_user%>
   <% unless @current_user %>
     <%= link_to 'Sign in', signin_path, class: "btn btn-outline-primary col-12" %>
