--- a/bookarea/app/views/books/show.html.erb
+++ b/bookarea/app/views/books/show.html.erb
@@ -24,8 +24,7 @@
   <%= @book.isbn %>
 </p>
 <% if @book.related?(@current_user)%>
-  <%=  button_to 'Like', {controller: :books, action: :like, id: @book.id }, method: :put,   disabled: 'true' %>
-  <%# <%= button_to 'Like', books_like_path(@book), method: 'put', disabled: true %> %>
+  <%=  button_to 'Unlike', {controller: :books, action: :unlike, id: @book.id }, method: :put%>
 <% else%> 
   <%=  button_to 'Like', {controller: :books, action: :like, id: @book.id }, method: :put%>
 <% end %>
