--- a/bookarea/app/views/users/_back.html.erb
+++ b/bookarea/app/views/users/_back.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Back', @current_user.admin ? users_path : root_path, class: 'btn btn-outline-secondary' %>
+<%= link_to 'Back', @current_user&.admin ? users_path : root_path, class: 'btn btn-outline-secondary' %>
