--- a/bookarea/app/views/books/index.html.erb
+++ b/bookarea/app/views/books/index.html.erb
@@ -1,35 +1,5 @@
 <p id="notice"><%= notice %></p>
 <h1>Books</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Author</th>
-      <th>Publishing house</th>
-      <th>Year</th>
-      <th>Isbn</th>
-      <th>liked_by</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.name %></td>
-        <td><%= book.author %></td>
-        <td><%= book.publishing_house %></td>
-        <td><%= book.year %></td>
-        <td><%= book.isbn %></td>
-        <td><%= book.users.to_a.map { |e| e[:username] }.join(', ') %> </td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
     <div class='col-6 col-sm-4 col-md-3 p-2'>
     <% @books.each do |book| %>
       <div class="card mb-3">
@@ -45,6 +15,7 @@
     </div>
     <div class='col-3'>
     <% if @current_user&.admin || @current_user == book.users.first%>
+    <%= link_to 'Edit', edit_book_path(book) %>
     <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end%>
     </div>
