--- a/bookarea/app/views/books/index.html.erb
+++ b/bookarea/app/views/books/index.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 <h1>Books</h1>
-    <div class='col-6 col-sm-4 col-md-3 p-2'>
+    <div class='row row-cols-1 row-cols-md-5'>
     <% @books.each do |book| %>
+    <div style='margin: 0.1rem;'>
       <div class="card mb-3">
   <div class="card-header">ISBN: <%= book.isbn%></div>
   <div class="card-body">
@@ -10,10 +11,10 @@
   <div class='card-footer'>
   <div class='container'>
   <div class='row'>
-  <div class='col-2'>
+  <div class='col'>
     <%= button_to 'more', {controller: :books, action: :show, id: book.id}, method: :get %>
     </div>
-    <div class='col-3'>
+    <div class='col'>
     <% if @current_user&.admin || @current_user == book.users.first%>
     <%= link_to 'Edit', edit_book_path(book) %>
     <%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -21,6 +22,7 @@
     </div>
     </div>
     </div>
+  </div>
   </div>
   </div>
       <% end %>
