--- a/bookarea/app/views/layouts/application.html.erb
+++ b/bookarea/app/views/layouts/application.html.erb
@@ -27,16 +27,11 @@
 
       <div class="navbar-collapse collapse" id='navbar'>
         <ul class="navbar-nav me-auto mb-2 mb-sm-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-bs-toggle="dropdown" aria-expanded="false">Books</a>
-            <ul class="dropdown-menu" aria-labelledby="dropdown03">
-              <li><a class='dropdown-item' href='/books'>View all</a></li>
-              <li><a class="dropdown-item" href="/books/new">Add new</a></li>
-            </ul>
-          </li>
+          <li class="nav-item"><a class="nav-link" href='/books'>View all</a></li>
+          <li class="nav-item"><a class='nav-link' href="/books/new">Add new</a></li>
           <% if @current_user&.admin %>
           <li class="nav-item">
-            <a class="nav-link" href="/users">Users</a>
+            <a class="nav-link --bs" href="/users">Users</a>
           </li>
           <% end%>
           </ul>
