--- a/bookarea/app/views/books/_back.html.erb
+++ b/bookarea/app/views/books/_back.html.erb
@@ -1,1 +1,1 @@
-<%= link_to t('forms.back'), books_path, class: 'btn btn-secondary' %>
+<%= link_to t('Forms.Back'), books_path, class: 'btn btn-secondary' %>
