--- a/bookarea/app/views/books/edit.html.erb
+++ b/bookarea/app/views/books/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Book</h1>
+<h1><%= t('Forms.Editing Book') %></h1>
 
 <%= render 'form', book: @book %>
 
-<%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+<%= link_to t('Forms.Show'), @book %> |
+<%= link_to t('Forms.Back'), books_path %>
