--- a/bookarea/app/views/books/like.js.erb
+++ b/bookarea/app/views/books/like.js.erb
@@ -1,3 +1,3 @@
 document.getElementById("like-btn").innerHTML = `
-<%= button_to 'Unlike', { action: :unlike, id: @book.id }, method: :put, remote: true, class: 'btn btn-danger' %>
+<%= button_to t('Show.Unlike'), { action: :unlike, id: @book.id }, method: :put, remote: true, class: 'btn btn-danger' %>
 `
