--- a/bookarea/app/views/books/new.html.erb
+++ b/bookarea/app/views/books/new.html.erb
@@ -1,3 +1,3 @@
-<h1>New Book</h1>
+<h1><%= t('Forms.New Book') %></h1>
 <%= render 'form', book: @book%>
-<%= link_to 'Back', books_path %>
+<%= link_to t('Forms.Back'), books_path %>
