--- a/bookarea/app/views/books/unlike.js.erb
+++ b/bookarea/app/views/books/unlike.js.erb
@@ -1,3 +1,3 @@
 document.getElementById("like-btn").innerHTML = `
-<%= button_to 'Like', { action: :like, id: @book.id }, method: :put, remote: true, class: 'btn btn-danger' %>
+<%= button_to t('Show.Like'), { action: :like, id: @book.id }, method: :put, remote: true, class: 'btn btn-danger' %>
 `
