--- a/bookarea/app/views/users/edit.html.erb
+++ b/bookarea/app/views/users/edit.html.erb
@@ -1,11 +1,11 @@
 <div style='margin: auto; width: 20%;'>
-<h1>Edit user</h1>
+<h1><%= t 'Users.Edit user'%></h1>
 <div>
   <%= render 'form', user: @user, current_user: @current_user %>
   <div class="btn-group col-12">
-    <%= link_to 'Show', @user, class: 'btn btn-outline-primary margin' %>
+    <%= link_to t('Forms.Show'), @user, class: 'btn btn-outline-primary margin' %>
     <%= render 'back', current_user: @current_user %>
-    <%= link_to 'Delete account', {controller: :users, action: :destroy, id: session[:current_user_id]},
+    <%= link_to t('Forms.delete'), {controller: :users, action: :destroy, id: session[:current_user_id]},
                   method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger'%>
   </div>
 </div>
