--- a/bookarea/app/views/users/index.html.erb
+++ b/bookarea/app/views/users/index.html.erb
@@ -2,13 +2,13 @@
     <div class="alert alert-success"><%= notice %></div>
 <% end %>
 <div style='margin: auto; width: 30%;'>
-  <h1>Users</h1>
+  <h1><%= t('Forms.users') %></h1>
   <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col">Username</th>
-        <th scope="col">Email</th>
-        <th scope="col">Is Admin?</th>
+        <th scope="col"><%="#{t('Forms.Username')}:" %></th>
+        <th scope="col"><%="#{t('Forms.Email')}:" %></th>
+        <th scope="col"><%= "#{t('Forms.is admin')}:" %></th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -18,10 +18,10 @@
         <tr>
           <td><%= user.username %></td>
           <td><%= user.email %></td>
-          <td><%= user.admin ? 'Yes' : 'No' %>
-          <td><%= link_to 'Show', user, class: 'btn btn-outline-primary btn-sm' %></td>
-          <td><%= link_to 'Edit', edit_user_path(user), class: 'btn btn-outline-primary btn-sm' %></td>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-outline-danger btn-sm' %></td>
+          <td><%= user.admin ? t('Yes') : t('No') %>
+          <td><%= link_to t('Forms.Show'), user, class: 'btn btn-outline-primary btn-sm' %></td>
+          <td><%= link_to t('Books.edit'), edit_user_path(user), class: 'btn btn-outline-primary btn-sm' %></td>
+          <td><%= link_to t('Books.destroy'), user, method: :delete, data: { confirm: t('messages.are_you_sure?') }, class: 'btn btn-outline-danger btn-sm' %></td>
         </tr>
       <% end %>
     </tbody>
@@ -29,6 +29,6 @@
 
   <br>
   <div>
-    <%= link_to 'New User', new_user_path, class: 'btn btn-outline-primary col-12', style: 'margin-bottom: 5px' %>
+    <%= link_to t('Forms.new_user'), new_user_path, class: 'btn btn-outline-primary col-12', style: 'margin-bottom: 5px' %>
   </div>
 </div>
