--- a/bookarea/app/views/users/new.html.erb
+++ b/bookarea/app/views/users/new.html.erb
@@ -1,12 +1,12 @@
 <div style='margin: auto; width: 20%;'>
 <% unless @current_user %>
-  <h1>Sign up</h1>
+  <h1><%= t('Forms.sign_up') %></h1>
 <% else %>
-  <h1>New user</h1>
+  <h1><% t('Forms.new_user') %></h1>
 <% end %>
   <%= render 'form', user: @user, current_user: @current_user%>
   <% unless @current_user %>
-    <%= link_to 'Sign in', signin_path, class: "btn btn-outline-primary col-12" %>
+    <%= link_to t('Forms.sign_in'), signin_path, class: "btn btn-outline-primary col-12" %>
   <% else %>
     <div class="btn-group col-12">
       <%= render 'back', current_user: @current_user %>
