--- a/bookarea/app/views/users/show.html.erb
+++ b/bookarea/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1>User data</h1>
+<h1><%= t("Users.User data") %></h1>
 
 <div>
   <% flash[:notice]&.tap do |notice| %>
@@ -6,34 +6,38 @@
   <% end %>
 
   <p>
-    <strong>Username:</strong>
+    <strong><%= t("Forms.Username") %></strong>
     <%= @user.username %>
   </p>
 
   <p>
-    <strong>Email:</strong>
+    <strong><%= t("Forms.Email") %></strong>
     <%= @user.email %>
   </p>
 
 <div class>
-  <strong>Liked books</strong>
+  <strong><%= t("Users.Liked books") %></strong>
   <% if (@user.books.length != 0)  %>
   <% @user.books.each do |book| %>
   <div class="card text-white bg-primary mb-3">
-  <div class="card-header"><%= book.isbn%></div>
+  <div class="card-header">ISBN:<%= book.isbn%></div>
   <div class="card-body">
-    <h5 class="card-title">"<%= book.name%>" by <%= book.author%></h5>
-    <p class="card-text"><%= book.publishing_house%><br/><%= book.year%></p>
+    <h5 class="card-title">"<%= book.name%>" <%= t('Books.by') %> <%= book.author%></h5>
+    <p class="card-text">
+      <%= "#{t('Forms.Publishing house')}:#{book.publishing_house}" %><br/>
+      <%= "#{t('Forms.Year')}:" %>
+      <%= book.year %></p>
   </div>
   </div>
     <% end %>
   <% else %>
-    <p> nothing liked </p>  
+    <p> <%= t('Users.nothing liked') %>> </p>
   <% end %>
   </div>
 
   <div class="btn-group col-12">
-    <%= link_to 'Edit', edit_user_path(@user), class: 'btn btn-primary'%>
+    <%= link_to t('Books.edit'), edit_user_path(@user), class: 'btn btn-primary'%>
     <%= render 'back', current_user: @current_user %>
   </div>
 </p>
+</div>
