--- a/bookarea/app/javascript/stylesheets/application.scss
+++ b/bookarea/app/javascript/stylesheets/application.scss
@@ -1,6 +1,6 @@
-body {
-    background-color: rgb(61, 61, 61);
-}
+// body {
+//     background-color: rgb(61, 61, 61);
+// }
 .cardo {
     width: 20%;
     margin: auto;
